# backend/controllers/bingo_card.go
@@ -21,8 +21,8 @@ func FindBingoCards(c *gin.Context) {
 	var bingoCards []models.BingoCardDto
 
 	models.DB.Table("bingo_cards").
-		Select("bingo_cards.id, bingo_cards.description, count(user_bingo_cards.bingo_card_id) as user_count").
-		Joins("left join user_bingo_cards on user_bingo_cards.bingo_card_id = bingo_cards.id").
+		Select("bingo_cards.id, bingo_cards.description, count(user_bingo_card.bingo_card_id) as user_count").
+		Joins("left join user_bingo_card on user_bingo_card.bingo_card_id = bingo_cards.id").
 		Group("bingo_cards.id").
 		Scan(&bingoCards)
 
